# Algorithms_And_DataStructures

./: .gitignore  Algorithms_DataStructures_Library.sln  CMakeLists.txt  README.md
tests/: CMakeLists.txt  setup_test.cpp
tests/binary_search_tree_tests/: binary_Search_tree_insertion_tests.cpp  binary_search_tree_access_tests.cpp  binary_search_tree_collection_interface_tests.cpp  binary_search_tree_collection_tests.cpp  binary_search_tree_emplace_tests.cpp  binary_search_tree_iterator_tests.cpp  binary_search_tree_removal_tests.cpp  binary_search_tree_test_fixture.h
tests/collection_test_suites/: assignment_tests.h  collection_test_fixture.h  constructor_tests.h  hash_table_interface_tests.h  list_interface_tests.h  size_tests.h  test_inputs.h
tests/collection_test_suites/access_tests/: associative_bound_tests.h  associative_search_tests.h  bag_tests.h  map_tests.h  sequential_access_tests.h  sequential_index_access_tests.h
tests/collection_test_suites/insertion_tests/: associative_hinted_insertion_tests.h  associative_insertion_tests.h  bag_insertion_tests.h  sequential_index_insertion_tests.h  sequential_insertion_tests.h  sequential_positioned_insertion_tests.h  set_insertion_tests.h
tests/collection_test_suites/iterator_tests/: bidirectional_iterator_tests.h  forward_iterator_tests.h  input_iterator_tests.h  random_access_iterator_tests.h
tests/collection_test_suites/operator_tests/: comparison_tests.h  equality_tests.h  stream_tests.h
tests/collection_test_suites/removal_tests/: associative_removal_tests.h  sequential_index_removal_tests.h  sequential_positioned_removal_tests.h  sequential_removal_tests.h
tests/collection_tests/avl_tree_tests/: avl_tree_access_tests.cpp  avl_tree_assignment_tests.cpp  avl_tree_collection_tests.cpp  avl_tree_constructor_tests.cpp  avl_tree_emplace_tests.cpp  avl_tree_insert_tests.cpp  avl_tree_insertion_tests.cpp  avl_tree_iterator_tests.cpp  avl_tree_operator_tests.cpp  avl_tree_removal_tests.cpp  avl_tree_remove_tests.cpp  avl_tree_size_tests.cpp  avl_tree_structure_tests.cpp  avl_tree_test_fixture.h
tests/collection_tests/binary_heap_tests/: binary_heap_assignment_tests.cpp  binary_heap_collection_tests.cpp  binary_heap_constructor_tests.cpp  binary_heap_interface_tests.cpp  binary_heap_iterator_tests.cpp  binary_heap_operator_tests.cpp  binary_heap_size_tests.cpp  binary_heap_test_fixture.h
tests/collection_tests/binary_search_tree_tests/: binary_search_tree_access_tests.cpp  binary_search_tree_collection_tests.cpp  binary_search_tree_emplace_tests.cpp  binary_search_tree_insert_tests.cpp  binary_search_tree_remove_tests.cpp  binary_search_tree_structure_tests.cpp  binary_search_tree_test_fixture.h  bst_access_tests.cpp  bst_assignment_tests.cpp  bst_constructor_tests.cpp  bst_insertion_tests.cpp  bst_iterator_tests.cpp  bst_operator_tests.cpp  bst_removal_tests.cpp  bst_size_tests.cpp  bst_structure_tests.cpp
tests/collection_tests/chained_hash_table_tests/: chained_table_access_tests.cpp  chained_table_assignment_tests.cpp  chained_table_constructor_tests.cpp  chained_table_insertion_tests.cpp  chained_table_interface_tests.cpp  chained_table_iterator_tests.cpp  chained_table_operator_tests.cpp  chained_table_removal_tests.cpp  chained_table_size_tests.cpp
tests/collection_tests/dynamic_array_tests/: dynamic_array_access_tests.cpp  dynamic_array_allocation_tests.cpp  dynamic_array_assignment_tests.cpp  dynamic_array_collection_tests.cpp  dynamic_array_constructor_tests.cpp  dynamic_array_emplace_tests.cpp  dynamic_array_insert_tests.cpp  dynamic_array_insertion_tests.cpp  dynamic_array_interface_tests.cpp  dynamic_array_iterator_tests.cpp  dynamic_array_operator_tests.cpp  dynamic_array_removal_tests.cpp  dynamic_array_remove_tests.cpp  dynamic_array_size_tests.cpp  dynamic_array_test_fixture.h
tests/collection_tests/forward_list_tests/: forward_list_access_tests.cpp  forward_list_assignment_tests.cpp  forward_list_collection_tests.cpp  forward_list_constructor_tests.cpp  forward_list_emplace_tests.cpp  forward_list_insert_tests.cpp  forward_list_insertion_tests.cpp  forward_list_interface_tests.cpp  forward_list_iterator_tests.cpp  forward_list_operator_tests.cpp  forward_list_removal_tests.cpp  forward_list_remove_tests.cpp  forward_list_size_tests.cpp  forward_list_test_fixture.h
tests/collection_tests/linked_list_tests/: linked_list_access_tests.cpp  linked_list_assignment_tests.cpp  linked_list_collection_tests.cpp  linked_list_constructor_tests.cpp  linked_list_emplace_tests.cpp  linked_list_insert_tests.cpp  (+8 more)
tests/dynamic_array_tests/: dynamic_array_access_tests.cpp  dynamic_array_allocation_tests.cpp  dynamic_array_collection_interface_tests.cpp  dynamic_array_collection_tests.cpp  dynamic_array_emplace_tests.cpp  dynamic_array_insertion_tests.cpp  dynamic_array_iterator_tests.cpp  dynamic_array_removal_tests.cpp  dynamic_array_test_fixture.h
tests/linked_list_tests/: linked_list_access_tests.cpp  linked_list_collection_interface_tests.cpp  linked_list_collection_tests.cpp  linked_list_emplace_tests.cpp  linked_list_insertion_tests.cpp  linked_list_iterator_tests.cpp  linked_list_removal_tests.cpp  linked_list_test_fixture.h
tests/mocks/: mock_allocator.h
tests/queue_tests/: queue_collection_interface_tests.cpp  queue_collection_tests.cpp  queue_interface_tests.cpp  queue_test_fixture.h
tests/stack_tests/: stack_collection_interface_tests.cpp  stack_collection_tests.cpp  stack_interface_tests.cpp  stack_test_fixture.h
tests/test_data/: test_inputs.h  test_types.h
tests/test_suites/: associative_collection_access_tests.h  associative_collection_emplace_tests.h  associative_collection_insert_tests.h  associative_collection_remove_tests.h  binary_tree_test_fixture.h  collection_iterator_tests.h  collection_test_fixture.h  collection_tests.h  ordered_collection_tests.h  sequential_collection_access_tests.h  sequential_collection_emplace_tests.h  sequential_collection_insert_tests.h  sequential_collection_remove_tests.h  sequential_collection_test_fixture.h  sequential_collection_tests.h
(+223 files in other folders)
