include(FetchContent)

FetchContent_Declare(
	googletest
	URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

include(GoogleTest)

include_directories(${PROJECT_SOURCE_DIR}/include)

macro(package_add_test TESTNAME)
	# create an executable in which the tests will be stored
	add_executable(${TESTNAME} ${ARGN})
	# link the Google test infrastructure, mocking library, and a default main function to
	# the test executable.  Remove g_test_main if writing your own main function.
	target_link_libraries(${TESTNAME} GTest::gmock_main)
	# gtest_discover_tests replaces gtest_add_tests,
	# see https://cmake.org/cmake/help/v3.10/module/GoogleTest.html for more options to pass to it
	gtest_discover_tests(${TESTNAME}
		# set a working directory so your project root so that you can find test data via paths relative to the project root
		WORKING_DIRECTORY ${PROJECT_DIR}
		PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
	)
endmacro()

package_add_test(setup_test setup_test.cpp)

package_add_test(dynamic_array_collection_tests container_tests/dynamic_array_tests/dynamic_array_collection_tests.cpp)
package_add_test(dynamic_array_allocation_tests container_tests/dynamic_array_tests/dynamic_array_allocation_tests.cpp)
package_add_test(dynamic_array_access_tests container_tests/dynamic_array_tests/dynamic_array_access_tests.cpp)
package_add_test(dynamic_array_insert_tests container_tests/dynamic_array_tests/dynamic_array_insert_tests.cpp)
package_add_test(dynamic_array_remove_tests container_tests/dynamic_array_tests/dynamic_array_remove_tests.cpp)
package_add_test(dynamic_array_emplace_tests container_tests/dynamic_array_tests/dynamic_array_emplace_tests.cpp)

package_add_test(linked_list_collection_tests container_tests/linked_list_tests/linked_list_collection_tests.cpp)
package_add_test(linked_list_access_tests container_tests/linked_list_tests/linked_list_access_tests.cpp)
package_add_test(linked_list_insert_tests container_tests/linked_list_tests/linked_list_insert_tests.cpp)
package_add_test(linked_list_remove_tests container_tests/linked_list_tests/linked_list_remove_tests.cpp)
package_add_test(linked_list_emplace_tests container_tests/linked_list_tests/linked_list_emplace_tests.cpp)

package_add_test(stack_collection_tests container_tests/stack_tests/stack_collection_tests.cpp)
package_add_test(stack_interface_tests container_tests/stack_tests/stack_interface_tests.cpp)

package_add_test(queue_collection_tests container_tests/queue_tests/queue_collection_tests.cpp)
package_add_test(queue_interface_tests container_tests/queue_tests/queue_interface_tests.cpp)

package_add_test(binary_search_tree_collection_tests container_tests/binary_search_tree_tests/binary_search_tree_collection_tests.cpp)
package_add_test(binary_search_tree_access_tests container_tests/binary_search_tree_tests/binary_search_tree_access_tests.cpp)
package_add_test(binary_search_tree_emplace_tests container_tests/binary_search_tree_tests/binary_search_tree_emplace_tests.cpp)
package_add_test(binary_search_tree_insert_tests container_tests/binary_search_tree_tests/binary_search_tree_insert_tests.cpp)
package_add_test(binary_search_tree_remove_tests container_tests/binary_search_tree_tests/binary_search_tree_remove_tests.cpp)
package_add_test(binary_search_tree_structure_tests container_tests/binary_search_tree_tests/binary_search_tree_structure_tests.cpp)

package_add_test(avl_tree_collection_tests container_tests/avl_tree_tests/avl_tree_collection_tests.cpp)
package_add_test(avl_tree_access_tests container_tests/avl_tree_tests/avl_tree_access_tests.cpp)
package_add_test(avl_tree_emplace_tests container_tests/avl_tree_tests/avl_tree_emplace_tests.cpp)
package_add_test(avl_tree_insert_tests container_tests/avl_tree_tests/avl_tree_insert_tests.cpp)
package_add_test(avl_tree_remove_tests container_tests/avl_tree_tests/avl_tree_remove_tests.cpp)
package_add_test(avl_tree_structure_tests container_tests/avl_tree_tests/avl_tree_structure_tests.cpp)

package_add_test(splay_tree_collection_tests container_tests/splay_tree_tests/splay_tree_collection_tests.cpp)
package_add_test(splay_tree_access_tests container_tests/splay_tree_tests/splay_tree_access_tests.cpp)
package_add_test(splay_tree_emplace_tests container_tests/splay_tree_tests/splay_tree_emplace_tests.cpp)
package_add_test(splay_tree_insert_tests container_tests/splay_tree_tests/splay_tree_insert_tests.cpp)
package_add_test(splay_tree_remove_tests container_tests/splay_tree_tests/splay_tree_remove_tests.cpp)
package_add_test(splay_tree_structure_tests container_tests/splay_tree_tests/splay_tree_structure_tests.cpp)