include(FetchContent)

FetchContent_Declare(
	googletest
	URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

include(GoogleTest)

include_directories(${PROJECT_SOURCE_DIR}/include)

macro(package_add_test TESTNAME)
	# create an executable in which the tests will be stored
	add_executable(${TESTNAME} ${ARGN})
	# link the Google test infrastructure, mocking library, and a default main function to
	# the test executable.  Remove g_test_main if writing your own main function.
	target_link_libraries(${TESTNAME} GTest::gmock_main)
	# gtest_discover_tests replaces gtest_add_tests,
	# see https://cmake.org/cmake/help/v3.10/module/GoogleTest.html for more options to pass to it
	gtest_discover_tests(${TESTNAME}
		# set a working directory so your project root so that you can find test data via paths relative to the project root
		WORKING_DIRECTORY ${PROJECT_DIR}
		PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
		NO_PRETTY_TYPES
		TEST_SUFFIX "                                                          "
	)
endmacro()

package_add_test(setup_test setup_test.cpp)

package_add_test(dynamic_array_constructor_tests collection_tests/dynamic_array_tests/dynamic_array_constructor_tests.cpp)
package_add_test(dynamic_array_assignment_tests collection_tests/dynamic_array_tests/dynamic_array_assignment_tests.cpp)
package_add_test(dynamic_array_size_tests collection_tests/dynamic_array_tests/dynamic_array_size_tests.cpp)
package_add_test(dynamic_array_operator_tests collection_tests/dynamic_array_tests/dynamic_array_operator_tests.cpp)
package_add_test(dynamic_array_insertion_tests collection_tests/dynamic_array_tests/dynamic_array_insertion_tests.cpp)
package_add_test(dynamic_array_removal_tests collection_tests/dynamic_array_tests/dynamic_array_removal_tests.cpp)
package_add_test(dynamic_array_iterator_tests collection_tests/dynamic_array_tests/dynamic_array_iterator_tests.cpp)
package_add_test(dynamic_array_access_tests collection_tests/dynamic_array_tests/dynamic_array_access_tests.cpp)
package_add_test(dynamic_array_allocation_tests collection_tests/dynamic_array_tests/dynamic_array_allocation_tests.cpp)
package_add_test(dynamic_array_interface_tests collection_tests/dynamic_array_tests/dynamic_array_interface_tests.cpp)

add_custom_target(dynamic_array_tests)
add_dependencies(
	dynamic_array_tests
	dynamic_array_constructor_tests
	dynamic_array_assignment_tests
	dynamic_array_size_tests
	dynamic_array_operator_tests
	dynamic_array_insertion_tests
	dynamic_array_removal_tests
	dynamic_array_iterator_tests
	dynamic_array_access_tests
	dynamic_array_allocation_tests
	dynamic_array_interface_tests
)

package_add_test(linked_list_constructor_tests collection_tests/linked_list_tests/linked_list_constructor_tests.cpp)
package_add_test(linked_list_assignment_tests collection_tests/linked_list_tests/linked_list_assignment_tests.cpp)
package_add_test(linked_list_size_tests collection_tests/linked_list_tests/linked_list_size_tests.cpp)
package_add_test(linked_list_operator_tests collection_tests/linked_list_tests/linked_list_operator_tests.cpp)
package_add_test(linked_list_insertion_tests collection_tests/linked_list_tests/linked_list_insertion_tests.cpp)
package_add_test(linked_list_removal_tests collection_tests/linked_list_tests/linked_list_removal_tests.cpp)
package_add_test(linked_list_iterator_tests collection_tests/linked_list_tests/linked_list_iterator_tests.cpp)
package_add_test(linked_list_access_tests collection_tests/linked_list_tests/linked_list_access_tests.cpp)
package_add_test(linked_list_interface_tests collection_tests/linked_list_tests/linked_list_interface_tests.cpp)

add_custom_target(linked_list_tests)
add_dependencies(
	linked_list_tests
	linked_list_constructor_tests
	linked_list_assignment_tests
	linked_list_size_tests
	linked_list_operator_tests
	linked_list_insertion_tests
	linked_list_removal_tests
	linked_list_iterator_tests
	linked_list_access_tests
	linked_list_interface_tests
)

package_add_test(forward_list_constructor_tests collection_tests/forward_list_tests/forward_list_constructor_tests.cpp)
package_add_test(forward_list_assignment_tests collection_tests/forward_list_tests/forward_list_assignment_tests.cpp)
package_add_test(forward_list_size_tests collection_tests/forward_list_tests/forward_list_size_tests.cpp)
package_add_test(forward_list_operator_tests collection_tests/forward_list_tests/forward_list_operator_tests.cpp)
package_add_test(forward_list_insertion_tests collection_tests/forward_list_tests/forward_list_insertion_tests.cpp)
package_add_test(forward_list_removal_tests collection_tests/forward_list_tests/forward_list_removal_tests.cpp)
package_add_test(forward_list_iterator_tests collection_tests/forward_list_tests/forward_list_iterator_tests.cpp)
package_add_test(forward_list_access_tests collection_tests/forward_list_tests/forward_list_access_tests.cpp)
package_add_test(forward_list_interface_tests collection_tests/forward_list_tests/forward_list_interface_tests.cpp)

add_custom_target(forward_list_tests)
add_dependencies(
	forward_list_tests
	forward_list_constructor_tests
	forward_list_assignment_tests
	forward_list_size_tests
	forward_list_operator_tests
	forward_list_insertion_tests
	forward_list_removal_tests
	forward_list_iterator_tests
	forward_list_access_tests
	forward_list_interface_tests
)

package_add_test(bst_constructor_tests collection_tests/binary_search_tree_tests/bst_constructor_tests.cpp)
package_add_test(bst_assignment_tests collection_tests/binary_search_tree_tests/bst_assignment_tests.cpp)
package_add_test(bst_size_tests collection_tests/binary_search_tree_tests/bst_size_tests.cpp)
package_add_test(bst_operator_tests collection_tests/binary_search_tree_tests/bst_operator_tests.cpp)
package_add_test(bst_insertion_tests collection_tests/binary_search_tree_tests/bst_insertion_tests.cpp)
package_add_test(bst_removal_tests collection_tests/binary_search_tree_tests/bst_removal_tests.cpp)
package_add_test(bst_iterator_tests collection_tests/binary_search_tree_tests/bst_iterator_tests.cpp)
package_add_test(bst_access_tests collection_tests/binary_search_tree_tests/bst_access_tests.cpp)
package_add_test(bst_structure_tests collection_tests/binary_search_tree_tests/bst_structure_tests.cpp)

add_custom_target(bst_tests)
add_dependencies(
	bst_tests
	bst_constructor_tests
	bst_assignment_tests
	bst_size_tests
	bst_operator_tests
	bst_insertion_tests
	bst_removal_tests
	bst_iterator_tests
	bst_access_tests
	bst_structure_tests
)

package_add_test(splay_tree_constructor_tests collection_tests/splay_tree_tests/splay_tree_constructor_tests.cpp)
package_add_test(splay_tree_assignment_tests collection_tests/splay_tree_tests/splay_tree_assignment_tests.cpp)
package_add_test(splay_tree_size_tests collection_tests/splay_tree_tests/splay_tree_size_tests.cpp)
package_add_test(splay_tree_operator_tests collection_tests/splay_tree_tests/splay_tree_operator_tests.cpp)
package_add_test(splay_tree_insertion_tests collection_tests/splay_tree_tests/splay_tree_insertion_tests.cpp)
package_add_test(splay_tree_removal_tests collection_tests/splay_tree_tests/splay_tree_removal_tests.cpp)
package_add_test(splay_tree_iterator_tests collection_tests/splay_tree_tests/splay_tree_iterator_tests.cpp)
package_add_test(splay_tree_access_tests collection_tests/splay_tree_tests/splay_tree_access_tests.cpp)
package_add_test(splay_tree_structure_tests collection_tests/splay_tree_tests/splay_tree_structure_tests.cpp)

add_custom_target(splay_tree_tests)
add_dependencies(
	splay_tree_tests
	splay_tree_constructor_tests
	splay_tree_assignment_tests
	splay_tree_size_tests
	splay_tree_operator_tests
	splay_tree_insertion_tests
	splay_tree_removal_tests
	splay_tree_iterator_tests
	splay_tree_access_tests
	splay_tree_structure_tests
)

package_add_test(avl_tree_constructor_tests collection_tests/avl_tree_tests/avl_tree_constructor_tests.cpp)
package_add_test(avl_tree_assignment_tests collection_tests/avl_tree_tests/avl_tree_assignment_tests.cpp)
package_add_test(avl_tree_size_tests collection_tests/avl_tree_tests/avl_tree_size_tests.cpp)
package_add_test(avl_tree_operator_tests collection_tests/avl_tree_tests/avl_tree_operator_tests.cpp)
package_add_test(avl_tree_insertion_tests collection_tests/avl_tree_tests/avl_tree_insertion_tests.cpp)
package_add_test(avl_tree_removal_tests collection_tests/avl_tree_tests/avl_tree_removal_tests.cpp)
package_add_test(avl_tree_iterator_tests collection_tests/avl_tree_tests/avl_tree_iterator_tests.cpp)
package_add_test(avl_tree_access_tests collection_tests/avl_tree_tests/avl_tree_access_tests.cpp)
package_add_test(avl_tree_structure_tests collection_tests/avl_tree_tests/avl_tree_structure_tests.cpp)

add_custom_target(avl_tree_tests)
add_dependencies(
	avl_tree_tests
	avl_tree_constructor_tests
	avl_tree_assignment_tests
	avl_tree_size_tests
	avl_tree_operator_tests
	avl_tree_insertion_tests
	avl_tree_removal_tests
	avl_tree_iterator_tests
	avl_tree_access_tests
	avl_tree_structure_tests
)

package_add_test(chained_table_constructor_tests collection_tests/chained_hash_table_tests/chained_table_constructor_tests.cpp)
package_add_test(chained_table_assignment_tests collection_tests/chained_hash_table_tests/chained_table_assignment_tests.cpp)
package_add_test(chained_table_size_tests collection_tests/chained_hash_table_tests/chained_table_size_tests.cpp)
package_add_test(chained_table_operator_tests collection_tests/chained_hash_table_tests/chained_table_operator_tests.cpp)
package_add_test(chained_table_insertion_tests collection_tests/chained_hash_table_tests/chained_table_insertion_tests.cpp)
package_add_test(chained_table_removal_tests collection_tests/chained_hash_table_tests/chained_table_removal_tests.cpp)
package_add_test(chained_table_iterator_tests collection_tests/chained_hash_table_tests/chained_table_iterator_tests.cpp)
package_add_test(chained_table_access_tests collection_tests/chained_hash_table_tests/chained_table_access_tests.cpp)
package_add_test(chained_table_interface_tests collection_tests/chained_hash_table_tests/chained_table_interface_tests.cpp)

add_custom_target(chaining_hash_table_tests)
add_dependencies(
	chaining_hash_table_tests
	chained_table_constructor_tests
	chained_table_assignment_tests
	chained_table_size_tests
	chained_table_operator_tests
	chained_table_insertion_tests
	chained_table_removal_tests
	chained_table_iterator_tests
	chained_table_access_tests
	chained_table_interface_tests
)

package_add_test(queue_constructor_tests collection_tests/queue_tests/queue_constructor_tests.cpp)
package_add_test(queue_assignment_tests collection_tests/queue_tests/queue_assignment_tests.cpp)
package_add_test(queue_operator_tests collection_tests/queue_tests/queue_operator_tests.cpp)
package_add_test(queue_iterator_tests collection_tests/queue_tests/queue_iterator_tests.cpp)
package_add_test(queue_size_tests collection_tests/queue_tests/queue_size_tests.cpp)
package_add_test(queue_interface_tests collection_tests/queue_tests/queue_interface_tests.cpp)

add_custom_target(queue_tests)
add_dependencies(
	queue_tests
	queue_constructor_tests
	queue_assignment_tests
	queue_operator_tests
	queue_iterator_tests
	queue_size_tests
	queue_interface_tests
)

package_add_test(stack_constructor_tests collection_tests/stack_tests/stack_constructor_tests.cpp)
package_add_test(stack_assignment_tests collection_tests/stack_tests/stack_assignment_tests.cpp)
package_add_test(stack_operator_tests collection_tests/stack_tests/stack_operator_tests.cpp)
package_add_test(stack_iterator_tests collection_tests/stack_tests/stack_iterator_tests.cpp)
package_add_test(stack_size_tests collection_tests/stack_tests/stack_size_tests.cpp)
package_add_test(stack_interface_tests collection_tests/stack_tests/stack_interface_tests.cpp)

add_custom_target(stack_tests)
add_dependencies(
	stack_tests
	stack_constructor_tests
	stack_assignment_tests
	stack_operator_tests
	stack_iterator_tests
	stack_size_tests
	stack_interface_tests
)

package_add_test(binary_heap_constructor_tests collection_tests/binary_heap_tests/binary_heap_constructor_tests.cpp)
package_add_test(binary_heap_assignment_tests collection_tests/binary_heap_tests/binary_heap_assignment_tests.cpp)
package_add_test(binary_heap_operator_tests collection_tests/binary_heap_tests/binary_heap_operator_tests.cpp)
package_add_test(binary_heap_iterator_tests collection_tests/binary_heap_tests/binary_heap_iterator_tests.cpp)
package_add_test(binary_heap_size_tests collection_tests/binary_heap_tests/binary_heap_size_tests.cpp)
package_add_test(binary_heap_interface_tests collection_tests/binary_heap_tests/binary_heap_interface_tests.cpp)

add_custom_target(binary_heap_tests)
add_dependencies(
	binary_heap_tests
	binary_heap_constructor_tests
	binary_heap_assignment_tests
	binary_heap_operator_tests
	binary_heap_iterator_tests
	binary_heap_size_tests
	binary_heap_interface_tests
)

package_add_test(ternary_heap_constructor_tests collection_tests/ternary_heap_tests/ternary_heap_constructor_tests.cpp)
package_add_test(ternary_heap_assignment_tests collection_tests/ternary_heap_tests/ternary_heap_assignment_tests.cpp)
package_add_test(ternary_heap_operator_tests collection_tests/ternary_heap_tests/ternary_heap_operator_tests.cpp)
package_add_test(ternary_heap_iterator_tests collection_tests/ternary_heap_tests/ternary_heap_iterator_tests.cpp)
package_add_test(ternary_heap_size_tests collection_tests/ternary_heap_tests/ternary_heap_size_tests.cpp)
package_add_test(ternary_heap_interface_tests collection_tests/ternary_heap_tests/ternary_heap_interface_tests.cpp)

add_custom_target(ternary_heap_tests)
add_dependencies(
	ternary_heap_tests
	ternary_heap_constructor_tests
	ternary_heap_assignment_tests
	ternary_heap_operator_tests
	ternary_heap_iterator_tests
	ternary_heap_size_tests
	ternary_heap_interface_tests
)